methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: '<-' expected but integer literal found.
  for (stepper 1 to 6) {
               ^MethodsReturning:11: error: illegal start of simple expression
} 
^